Changed photography image padding for all device sizes and fixed navigation spacing for mobile.

--- a/wp-content/themes/tomdallimore/assets/src/sass/_photography.scss
+++ b/wp-content/themes/tomdallimore/assets/src/sass/_photography.scss
@@ -1,6 +1,6 @@
 #photography {
     .row .tencol img {
-        margin:50px 0;
+        margin:40px 0;
         display: inline-block;
         line-height: 0;
         position: relative;
